Kirklees/partials/_vacancy-listing.scss
.vacancy-listing {
  display: flex;
  flex-wrap: wrap;
  align-items: stretch;
  justify-content: space-between;
  .vacancy-item {
    width: calc(100% - 1rem);
    margin-top: 1rem;
    @include breakpoint(md) {
      width: calc(50% - 1rem);
    }
    .vacancy-item-content {
      box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.125);
      height: 100%;
      background-color: #fff;
      padding: 1rem;
    }
    .vacancy-title {
      margin: 0;
      font-size: 1.75rem;
      line-height: 1.5;
      .vacancy-title-link {
        background: transparent;
        padding: 0;
        text-align: left;
      }
    }
    .vacancy-info-item {
      margin: 0.5rem 0;
      .item-title {
        font-weight: bold;
      }
      .item-value {
        display: inline-block;
        margin-left: 0.25rem;
      }
    }
  }
}

